fix a silly mistake I made and stop navbar text from jumping around so much

--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -105,9 +105,9 @@
 }
 
 .sidebar .sidebar-item:hover {
-    margin: 0 5%;
-    padding-left: 8%;
-    padding-right: 8%;
+    margin: 0;
+    padding-left: 11%;
+    padding-right: 11%;
     background-color: #00b371;
     cursor: pointer;
     border-top: 0rem solid #2d3134;
